Fix many problems detected by IntelliJ/Sonar code inspections